Correção no caminho dos assets; Add print da página no README

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,16 +10,16 @@
 
     <div class="social-icons">
         <a href="/">
-            <img src="icons/x.png" alt="X" class="icon">
+            <img src="assets/icons/x.png" alt="X" class="icon">
         </a>
         <a href="/">
-            <img src="icons/twitch.png" alt="Twitch" class="icon">
+            <img src="assets/icons/twitch.png" alt="Twitch" class="icon">
         </a>
         <a href="/">
-            <img src="icons/instagram.png" alt="Instagram" class="icon">
+            <img src="assets/icons/instagram.png" alt="Instagram" class="icon">
         </a>
         <a href="/">
-            <img src="icons/linkedin.png" alt="Linkedin" class="icon">
+            <img src="assets/icons/linkedin.png" alt="Linkedin" class="icon">
         </a>
     </div>
 </footer>
