--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Menu from '../components/Menu.astro';
 	<main class="container">
 		<Menu />
 		<Halo />
-		<img src="images/photo.png" alt="Photo">
+		<img src="assets/images/photo.png" alt="Photo">
 	</main>
 
 	<Footer />
