--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@
 
 <header class="container">
     <a href="/">
-        <img src="images/logo.png" alt="Logo" />
+        <img src="assets/images/logo.png" alt="Logo" />
         <p>ANONYMS</p>
     </a>
 
